feat(ui): implement initial canvas and playground structure
Adds the foundational UI structure for the main editor canvas and playground experience.

- Introduces `CanvasViewModel` to manage the state of the playground.

- Creates `PlaygroundView` as the main container for the canvas.

- Implements shared UI components including `NeuronNodeView`, `ConnectionView`, and `DotGridView` for rendering the graph.

- Sets up the basic folder structure for different view categories (Home, Story, Shared).

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,8 @@ CLAUDE.md
 GEMINI.md
 swiftUI-docs/
 
-# Swift Package Manager
-.swiftpm/
+# Swift Package Manager & Xcode
+.build/
+Neuraloom.swiftpm/.build/
+Neuraloom.swiftpm/.swiftpm/
+xcuserdata/
